javascript functionality complete

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+<div id="buttons">
+</div>
+<form id="inputForm">
+	<label for="bandInput">Enter a musician or band</label><br>
+	<input type="text" id="bandInput"><br>
+	<input id="addBand" type="submit" value="submit">
+</form>
+<div id="results">
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
 
-<script type="text/javascript" src="assets/javascript/game.js"></script>
+<script type="text/javascript" src="assets/javascript/script.js"></script>
 </body>
 </html>
