--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<title></title>
+
+	<link href='https://fonts.googleapis.com/css?family=Raleway|Titillium+Web' rel='stylesheet' type='text/css'>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
+	<link rel="stylesheet" href="assets/css/justifiedGallery.min.css">
+
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 <body>
 <div id="buttons">
@@ -21,6 +26,8 @@
 <div id="results">
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+
+<script type="text/javascript" src="assets/javascript/jquery.justifiedGallery.min.js"></script>
 
 <script type="text/javascript" src="assets/javascript/script.js"></script>
 </body>
